Add db sets and uncommented code

--- a/Ezac.Roster.Infrastructure/Ezac.Roster.Infrastructure.csproj
+++ b/Ezac.Roster.Infrastructure/Ezac.Roster.Infrastructure.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\Ezac.Roster.Domain\Ezac.Roster.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
