--- a/src/Ezac.Roster.Web/Ezac.Roster.Web.csproj
+++ b/src/Ezac.Roster.Web/Ezac.Roster.Web.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Ezac.Roster.Infrastructure\Ezac.Roster.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
