--- a/src/Ezac.Roster.Web/appsettings.json
+++ b/src/Ezac.Roster.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultDb": "Server=.\\SQLEXPRESS;Database=Ezac-Piranha;Trusted_Connection=True;MultipleActiveResultSets=True"
+        "DefaultDb": "Server=.\\SQLEXPRESS;Database=Ezac-Piranha;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
     },
     "Logging": {
         "LogLevel": {
