--- a/Ezac.Roster.Infrastructure/Ezac.Roster.Infrastructure.csproj
+++ b/Ezac.Roster.Infrastructure/Ezac.Roster.Infrastructure.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +21,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\Ezac.Roster.Domain\Ezac.Roster.Domain.csproj" />
   </ItemGroup>
 
 </Project>
