Create new subfolder components in folder components #24

--- a/src/Ezac.Roster.Web/Ezac.Roster.Web.csproj
+++ b/src/Ezac.Roster.Web/Ezac.Roster.Web.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Ezac.Roster.Infrastructure\Ezac.Roster.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Components\" />
+  </ItemGroup>
+
 </Project>
