Add boolean value for login across razor pages

--- a/src/Ezac.Roster.Web/Ezac.Roster.Web.csproj
+++ b/src/Ezac.Roster.Web/Ezac.Roster.Web.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\..\Ezac.Roster.Infrastructure\Ezac.Roster.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
