--- a/tests/Ezac.Roster.Domain.Tests/Ezac.Roster.Domain.Tests.csproj
+++ b/tests/Ezac.Roster.Domain.Tests/Ezac.Roster.Domain.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="MailKit" Version="4.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
       <PrivateAssets>all</PrivateAssets>
