Add smtp settings to appsettings

--- a/src/Ezac.Roster.Web/appsettings.json
+++ b/src/Ezac.Roster.Web/appsettings.json
@@ -9,5 +9,10 @@
         }
     },
     "AllowedHosts": "*",
-
+    "Smtp": {
+        "Host": "smtp.gmail.com",
+        "Port": "587",
+        "User": "mitch.kers1993@gmail.com",
+        "Password": "zhzc ahwm tuqp nqka"
+    }
 }
