--- a/src/Ezac.Roster.Web/appsettings.json
+++ b/src/Ezac.Roster.Web/appsettings.json
@@ -13,6 +13,6 @@
         "Host": "smtp.gmail.com",
         "Port": "587",
         "User": "mitch.kers1993@gmail.com",
-        "Password": "zhzc ahwm tuqp nqka"
+        "Password": "uivk oobi wdkk yges"
     }
 }
